# rosie_object_classifier

./: CMakeLists.txt  README.md  Untitled Document  cv2  package.xml
